tests/invalid/semantico_inalcanzable.flow
// EXPECT: E307
workflow demo {
    start -> validar
    validar -> end
    aislado -> end
}
